--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ button:hover{transform:translateY(-3px)}
 <!-- ===== EVENT 1 ===== -->
 <div class="page event">
   <h2>Ngày định hướng</h2>
-  <p>Ngày định hướng là một trong những ngày đầu tiên và đáng nhớ nhất... [5/9]</p>
+  <p>Ngày định hướng là một trong những ngày đầu tiên và đáng nhớ nhất... [Ngày 1/8]</p>
   <div class="gallery">
     <img src="DSC03421.jpg">
     <img src="3W3A1485.JPG">
@@ -127,7 +127,7 @@ button:hover{transform:translateY(-3px)}
 <!-- ===== EVENT 2 ===== -->
 <div class="page event">
   <h2>Khai giảng</h2>
-  <p>Ngày khai giảng được tổ chức tại sân trường... [5/9]</p>
+  <p>Ngày khai giảng được tổ chức tại sân trường... [Ngày 5/9]</p>
   <div class="gallery">
     <img src="IMG_0405.jpg">
     <img src="3W3A0222.jpg">
