--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ button:hover{transform:translateY(-3px)}
     <img src="3W3A1485.JPG">
     <img src="3W3A1348 (1).JPG">
     <img src="DSC8400 (1).JPG">
+    <img src="_DSC8468.jpg">
   </div>
   <div class="nav">
     <button onclick="go(0)">Trước</button>
@@ -127,7 +128,7 @@ button:hover{transform:translateY(-3px)}
 <!-- ===== EVENT 2 ===== -->
 <div class="page event">
   <h2>Khai giảng</h2>
-  <p>Ngày khai giảng được tổ chức tại sân trường... [Ngày 5/9]</p>
+  <p>Ngày khai giảng được tổ chức tại sân trường với các nghi thức cơ bản, chính thức mở đầu năm học mới. [Ngày 5/9]</p>
   <div class="gallery">
     <img src="IMG_0405.jpg">
     <img src="3W3A0222.jpg">
@@ -139,7 +140,21 @@ button:hover{transform:translateY(-3px)}
     <button onclick="go(3)">Sau</button>
   </div>
 </div>
-
+<!-- ===== EVENT 3 ===== -->
+<div class="page event">
+  <h2>Họp PH lần 1</h2>
+  <p>Buổi họp phụ huynh là dịp để nhà trường và gia đình cùng trao đổi về tình hình học tập, rèn luyện của học sinh, thống nhất cách phối hợp giáo dục và định hướng cho thời gian học tập sắp tới. [Ngày 6/9]</p>
+  <div class="gallery">
+    <img src="IMG_9683.JPG">
+    <img src="3W3A0222.jpg">
+    <img src="3W3A0352.jpg">
+    <img src="3W3A0225 (1).JPG">
+  </div>
+  <div class="nav">
+    <button onclick="go(1)">Trước</button>
+    <button onclick="go(3)">Sau</button>
+  </div>
+</div>
 <!-- ===== END ===== -->
 <div class="page end">
   <h2>Cảm ơn vì đã xem</h2>
