--- a/index.html
+++ b/index.html
@@ -146,9 +146,10 @@ button:hover{transform:translateY(-3px)}
   <p>Buổi họp phụ huynh là dịp để nhà trường và gia đình cùng trao đổi về tình hình học tập, rèn luyện của học sinh, thống nhất cách phối hợp giáo dục và định hướng cho thời gian học tập sắp tới. [Ngày 6/9]</p>
   <div class="gallery">
     <img src="IMG_9683.JPG">
-    <img src="3W3A0222.jpg">
-    <img src="3W3A0352.jpg">
-    <img src="3W3A0225 (1).JPG">
+    <img src="IMG_9674.JPG">
+    <img src="IMG_9689.JPG">
+    <img src="IMG_9710.JPG">
+    <img src="IMG_9698.JPG">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
