--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ button:hover{transform:translateY(-3px)}
     <img src="IMG_9689.JPG">
     <img src="IMG_9710.JPG">
     <img src="IMG_9698.JPG">
+    <img src="IMG_9695.JPG">
+   <img src="IMG_9712.JPG">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
