--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ button:hover{transform:translateY(-3px)}
     <img src="DSC03421.jpg">
     <img src="3W3A1485.JPG">
     <img src="3W3A1348 (1).JPG">
-    <img src="DSC8400 (1).JPG">
-    <img src="_DSC8468.jpg">
+    <img src="3W3A0222.jpg">
+    <img src="_DSC8400 (1).JPG">
   </div>
   <div class="nav">
     <button onclick="go(0)">Trước</button>
@@ -134,6 +134,8 @@ button:hover{transform:translateY(-3px)}
     <img src="3W3A0222.jpg">
     <img src="3W3A0352.jpg">
     <img src="3W3A0225 (1).JPG">
+    <img src="3W3A0347 (1).jpg">
+    <img src="3W3A0347 (1).jpg">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
