--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@ button:hover{transform:translateY(-3px)}
     <button onclick="go(3)">Sau</button>
   </div>
 </div>
+  <!-- ===== EVENT 4 ===== -->
+<div class="page event">
+  <h2>Bước chân tình nguyện</h2>
+  <p>Bước chân tình nguyện là nơi chúng tôi có thể chung tay giúp đỡ những hoàn cảnh khó khăn, lan tỏa tinh thần sẻ chia và trách nhiệm với cộng đồng.</p>
+  <div class="gallery">
+    <img src="20251004_014404160_iOS (1).jpg">
+    <img src="20251004_013821010_iOS (1).jpg">
+    <img src="IMGP8491.JPG">
+    <img src="IMGP8489.JPG">
+    <img src="IMGP8492 (1).JPG">
+    <img src="">
+    <img src="">
+  </div>
+  <div class="nav">
+    <button onclick="go(1)">Trước</button>
+    <button onclick="go(3)">Sau</button>
+  </div>
+</div>
 <!-- ===== END ===== -->
 <div class="page end">
   <h2>Cảm ơn vì đã xem</h2>
