--- a/index.html
+++ b/index.html
@@ -170,6 +170,43 @@ button:hover{transform:translateY(-3px)}
     <img src="IMGP8491.JPG">
     <img src="IMGP8489.JPG">
     <img src="IMGP8492 (1).JPG">
+    <img src="IMGP8483.JPG">
+    <img src="z7080223795901_798e4f5b0e279416eeb097da4e5c42ec.jpg">
+    <img src="IMGP8509.JPG">
+  </div>
+  <div class="nav">
+    <button onclick="go(1)">Trước</button>
+    <button onclick="go(3)">Sau</button>
+  </div>
+</div>
+    <!-- ===== EVENT 5 ===== -->
+<div class="page event">
+  <h2>Văn nghệ HK1</h2>
+  <p>Văn nghệ là nơi chúng tôi được tỏa sáng với những ý tưởng sáng tạo, tự tin thể hiện tài năng cá nhân và tinh thần tập thể, qua đó khẳng định màu cờ sắc áo của tập thể mình.</p>
+  <div class="gallery">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+  <div class="nav">
+    <button onclick="go(1)">Trước</button>
+    <button onclick="go(3)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT 6 ===== -->
+<div class="page event">
+  <h2>Công tác xã hội HK1</h2>
+  <p>Công tác xã hội là hoạt động giúp chúng tôi có cơ hội tham gia hỗ trợ, sẻ chia và kết nối với mọi người, từ đó nâng cao ý thức trách nhiệm đối với cộng đồng.</p>
+  <div class="gallery">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
     <img src="">
     <img src="">
   </div>
