--- a/index.html
+++ b/index.html
@@ -184,13 +184,17 @@ button:hover{transform:translateY(-3px)}
   <h2>Văn nghệ HK1</h2>
   <p>Văn nghệ là nơi chúng tôi được tỏa sáng với những ý tưởng sáng tạo, tự tin thể hiện tài năng cá nhân và tinh thần tập thể, qua đó khẳng định màu cờ sắc áo của tập thể mình.</p>
   <div class="gallery">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
+    <img src="Image (17) (1).jpg">
+    <img src="Image (21) (1).jpg">
+    <img src="Image (19) (1).jpg">
+    <img src="IMG_4254 (1).JPG">
+    <img src="IMG_9094.JPG">
+    <img src="IMG_9102.JPG">
+    <img src="IMG_4243.JPG">
+    <img src="IMG_9110.JPG">
+    <img src="z7130106225304_a8e66bf15ba06c0adf13eb9fd5330086.jpg">
+    <img src="IMG_9115.JPG">
+    <img src="Image (16) (1).jpg">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
