--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@ button:hover{transform:translateY(-3px)}
   <div class="gallery">
     <img src="IMG_9689.JPG">
     <img src="IMG_9710.JPG">
+    <img src="IMG_9713.JPG">
     <img src="IMG_9698.JPG">
-    <img src="IMG_9674.JPG">
     <img src="IMG_9712.JPG">
     <img src="IMG_9683.JPG">
     <img src="IMG_9695.JPG">
+    <img src="IMG_9674.JPG">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
@@ -205,13 +206,13 @@ button:hover{transform:translateY(-3px)}
   <h2>Công tác xã hội HK1</h2>
   <p>Công tác xã hội là hoạt động giúp chúng tôi có cơ hội tham gia hỗ trợ, sẻ chia và kết nối với mọi người, từ đó nâng cao ý thức trách nhiệm đối với cộng đồng.</p>
   <div class="gallery">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
+    <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg">
+    <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg">
+    <img src="z7153138148492_cc6f53bc9ae9c8b8e363fbb93504bdcb.jpg">
+    <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg">
+    <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
+    <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
+    <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
   </div>
   <div class="nav">
     <button onclick="go(1)">Trước</button>
