--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ button:active::after{
 <!-- ===== EVENT 1 ===== -->
 <div class="page event">
   <h2>Ngày định hướng</h2>
-  <p>Ngày định hướng là một trong những ngày đầu tiên và đáng nhớ nhất... [Ngày 1/8]</p>
+  <p>Ngày định hướng là dịp để chúng em làm quen với môi trường mới, hiểu rõ hơn về thầy cô, bạn bè và định hình mục tiêu học tập cho chặng đường phía trước. [Ngày 1/8]</p>
   <div class="gallery">
     <img src="DSC03421.jpg">
     <img src="3W3A1485.JPG">
@@ -180,9 +180,9 @@ button:active::after{
     <img src="IMG_9713.JPG">
     <img src="IMG_9698.JPG">
     <img src="IMG_9712.JPG">
-    <img src="IMG_9683.JPG">
-    <img src="IMG_9695.JPG">
     <img src="IMG_9674.JPG">
+    <img src="IMG_9695.JPG">
+    <img src="IMG_9683.JPG">
   </div>
   <div class="nav">
     <button onclick="go(2)">Trước</button>
@@ -193,7 +193,7 @@ button:active::after{
 <!-- ===== EVENT 4 ===== -->
 <div class="page event">
   <h2>Bước chân tình nguyện</h2>
-  <p>Bước chân tình nguyện là nơi chúng tôi có thể chung tay giúp đỡ những hoàn cảnh khó khăn, lan tỏa tinh thần sẻ chia và trách nhiệm với cộng đồng.</p>
+  <p>Bước chân tình nguyện là nơi chúng em có thể chung tay giúp đỡ những hoàn cảnh khó khăn, lan tỏa tinh thần sẻ chia và trách nhiệm với cộng đồng.</p>
   <div class="gallery">
     <img src="20251004_014404160_iOS (1).jpg">
     <img src="20251004_013821010_iOS (1).jpg">
@@ -213,7 +213,7 @@ button:active::after{
 <!-- ===== EVENT 5 ===== -->
 <div class="page event">
   <h2>Văn nghệ HK1</h2>
-  <p>Văn nghệ là nơi chúng tôi được tỏa sáng với những ý tưởng sáng tạo, tự tin thể hiện tài năng cá nhân và tinh thần tập thể, qua đó khẳng định màu cờ sắc áo của tập thể mình.</p>
+  <p>Văn nghệ là nơi chúng em được tỏa sáng với những ý tưởng sáng tạo, tự tin thể hiện tài năng cá nhân và tinh thần tập thể, qua đó khẳng định màu cờ sắc áo của tập thể mình.</p>
   <div class="gallery">
     <img src="Image (17) (1).jpg">
     <img src="Image (21) (1).jpg">
@@ -236,7 +236,25 @@ button:active::after{
 <!-- ===== EVENT 6 ===== -->
 <div class="page event">
   <h2>Công tác xã hội HK1</h2>
-  <p>Công tác xã hội là hoạt động giúp chúng tôi có cơ hội tham gia hỗ trợ, sẻ chia và kết nối với mọi người, từ đó nâng cao ý thức trách nhiệm đối với cộng đồng.</p>
+  <p>Công tác xã hội là hoạt động giúp chúng em có cơ hội tham gia hỗ trợ, sẻ chia và kết nối với mọi người, từ đó nâng cao ý thức trách nhiệm đối với cộng đồng.</p>
+  <div class="gallery">
+    <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg">
+    <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg">
+    <img src="z7153138148492_cc6f53bc9ae9c8b8e363fbb93504bdcb.jpg">
+    <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg">
+    <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
+    <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
+    <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
+  </div>
+  <div class="nav">
+    <button onclick="go(5)">Trước</button>
+    <button onclick="go(7)">Sau</button>
+  </div>
+</div>
+  <!-- ===== EVENT 7 ===== -->
+<div class="page event">
+  <h2>Hội thao HK1</h2>
+  <p>Hội thao là dịp để chúng em rèn luyện sức khỏe, phát huy tinh thần đoàn kết và thi đấu hết mình, góp phần tạo nên không khí sôi nổi và gắn kết tập thể.</p>
   <div class="gallery">
     <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg">
     <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg">
