--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@ button:active::after{
     <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
     <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
     <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
+    <video class="event-video" controls>
+    <source src="h" type="video/mp4">
+    Trình duyệt của bạn không hỗ trợ video.
+  </video>
+</div>
   </div>
   <div class="nav">
     <button onclick="go(5)">Trước</button>
