--- a/index.html
+++ b/index.html
@@ -253,26 +253,28 @@ button:active::after{
 </div>
   <!-- ===== EVENT 7 ===== -->
 <div class="page event">
-  <h2>Hội thao HK1</h2>
-  <p>Hội thao là dịp để chúng em rèn luyện sức khỏe, phát huy tinh thần đoàn kết và thi đấu hết mình, góp phần tạo nên không khí sôi nổi và gắn kết tập thể.</p>
-  <div class="gallery">
-    <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg">
-    <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg">
-    <img src="z7153138148492_cc6f53bc9ae9c8b8e363fbb93504bdcb.jpg">
-    <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg">
-    <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
-    <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
-    <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
-    <video class="event-video" controls>
-    <source src="h" type="video/mp4">
-    Trình duyệt của bạn không hỗ trợ video.
-  </video>
+<h2>Hội thao HK1</h2>
+<p>Hội thao là dịp để chúng em rèn luyện sức khỏe, phát huy tinh thần đoàn kết và thi đấu hết mình, góp phần tạo nên không khí sôi nổi và gắn kết tập thể.</p>
+
+<div class="gallery">
+  <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg">
+  <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg">
+  <img src="z7153138148492_cc6f53bc9ae9c8b8e363fbb93504bdcb.jpg">
+  <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg">
+  <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
+  <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
+  <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
 </div>
-  </div>
-  <div class="nav">
-    <button onclick="go(5)">Trước</button>
-    <button onclick="go(7)">Sau</button>
-  </div>
+
+<video class="event-video" controls>
+  <source src="7434650371279.mp4" type="video/mp4">
+  <source src="7434650436944.mp4" type="video/mp4">
+  Trình duyệt của bạn không hỗ trợ video.
+</video>
+
+<div class="nav">
+  <button onclick="go(5)">Trước</button>
+  <button onclick="go(7)">Sau</button>
 </div>
 
 <!-- ===== END ===== -->
