--- a/index.html
+++ b/index.html
@@ -276,7 +276,27 @@ button:active::after{
   <button onclick="go(5)">Trước</button>
   <button onclick="go(7)">Sau</button>
 </div>
-
+<!-- ===== EVENT 8 ===== -->
+<div class="page event">
+  <h2>Ngày Nhà Giáo Việt Nam</h2>
+  <p>Ngày Nhà giáo Việt Nam là dịp để chúng em bày tỏ lòng biết ơn, sự kính trọng và tri ân sâu sắc đến thầy cô – những người đã tận tâm dìu dắt chúng em trên con đường học tập.</p>
+  <div class="gallery">
+    <img src="z7434665435079_eefa65e774757fd6b1db59af60af4558.jpg">
+    <img src="z7434665446755_00dc65de170987b4cc41d447208e11cb.jpg">
+    <img src="z7434665451432_a49bee2959ad80a070427d22665a9626.jpg">
+    <img src="z7434665467432_403417933f2d095a157592b21303034b.jpg">
+    <img src="z7434665541528_92fec0f0f90a3e20e7db121965cb3692.jpg">
+    <img src="z7434665499470_7d3f54ae90f8812fa99b8b53f7b58b73.jpg">
+    <img src="z7434665434315_4b7de55d4243770871f710fb15ea1a20.jpg">
+    <img src="z7434665530905_9a467fc6919bad64a251e3807404b755.jpg">
+    <img src="z7434665467077_34651c5af68c7d2f33a4ca96bedf9b1c.jpg">
+    <img src="z7434665458187_5af4ab4c1a7cd3a81a2db56c9be14d67.jpg">
+  </div>
+  <div class="nav">
+    <button onclick="go(5)">Trước</button>
+    <button onclick="go(7)">Sau</button>
+  </div>
+</div>
 <!-- ===== END ===== -->
 <div class="page end">
   <h2>Cảm ơn vì đã xem</h2>
