--- a/index.html
+++ b/index.html
@@ -253,28 +253,28 @@ button:active::after{
 </div>
   <!-- ===== EVENT 7 ===== -->
 <div class="page event">
-<h2>Hội thao HK1</h2>
-<p>Hội thao là dịp để chúng em rèn luyện sức khỏe, phát huy tinh thần đoàn kết và thi đấu hết mình, góp phần tạo nên không khí sôi nổi và gắn kết tập thể.</p>
+  <h2>Hội thao HK1</h2>
+  <p>Hội thao là dịp để chúng em rèn luyện sức khỏe, phát huy tinh thần đoàn kết và thi đấu hết mình, góp phần tạo nên không khí sôi nổi và gắn kết tập thể.</p>
 
-<div class="gallery">
-  <img src="z7434652672199_efc89dc219f0ea4e7f0dce9e073a7bcd.jpg">
-  <img src="z7434652712095_6d77653491a631aebd1817eab3b51bec.jpg">
-  <img src="z7434652691420_75b95588323c1a49e8798a14ccfb7b2b.jpg">
-  <img src="z7434652678559_55471b800769011a25dca0c57736b762.jpg">
-  <img src="z7434652716792_8fbc187bc395f6271de3560e99e3f9d7.jpg">
-  <img src="z7434652684487_15f6d30200725d9e2d1a1caa98d8a998.jpg">
-  <img src="z7434652700030_a157b67a1452bfa553fd1230664a481f.jpg">
-</div>
+  <div class="gallery">
+    <img src="z7434652672199_efc89dc219f0ea4e7f0dce9e073a7bcd.jpg">
+    <img src="z7434652712095_6d77653491a631aebd1817eab3b51bec.jpg">
+    <img src="z7434652691420_75b95588323c1a49e8798a14ccfb7b2b.jpg">
+    <img src="z7434652678559_55471b800769011a25dca0c57736b762.jpg">
+    <img src="z7434652716792_8fbc187bc395f6271de3560e99e3f9d7.jpg">
+    <img src="z7434652684487_15f6d30200725d9e2d1a1caa98d8a998.jpg">
+    <img src="z7434652700030_a157b67a1452bfa553fd1230664a481f.jpg">
+  </div>
 
-<video class="event-video" controls>
-  <source src="7434650371279.mp4" type="video/mp4">
-  <source src="7434650436944.mp4" type="video/mp4">
-  Trình duyệt của bạn không hỗ trợ video.
-</video>
+  <video class="event-video" controls preload="metadata">
+    <source src="7434650371279.mp4" type="video/mp4">
+    Trình duyệt của bạn không hỗ trợ video.
+  </video>
 
-<div class="nav">
-  <button onclick="go(5)">Trước</button>
-  <button onclick="go(7)">Sau</button>
+  <div class="nav">
+    <button onclick="go(6)">Trước</button>
+    <button onclick="go(8)">Sau</button>
+  </div>
 </div>
 <!-- ===== EVENT 8 ===== -->
 <div class="page event">
