--- a/index.html
+++ b/index.html
@@ -297,6 +297,24 @@ button:active::after{
     <button onclick="go(7)">Sau</button>
   </div>
 </div>
+  <!-- ===== EVENT 9 ===== -->
+<div class="page event">
+  <h2>Học tập trải nghiệm & Teambuilding K7</h2>
+  <p>Học tập trải nghiệm là hoạt động giúp chúng em học hỏi qua thực tế, rèn luyện kỹ năng và mở rộng hiểu biết, từ đó gắn kiến thức với cuộc sống hằng ngày.</p>
+  <div class="gallery">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="z7155101269356_bbd12adc50f77aeef7a701fb114da04d.jpg">
+    <img src="z7155101212247_f105711cbf073cd3aaa53297acac748a.jpg">
+    <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
+    <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
+  </div>
+  <div class="nav">
+    <button onclick="go(5)">Trước</button>
+    <button onclick="go(7)">Sau</button>
+  </div>
+</div>
 <!-- ===== END ===== -->
 <div class="page end">
   <h2>Cảm ơn vì đã xem</h2>
