--- a/index.html
+++ b/index.html
@@ -317,6 +317,24 @@ button:active::after{
     <button onclick="go(7)">Sau</button>
   </div>
 </div>
+  <!-- ===== EVENT 10 ===== -->
+<div class="page event">
+  <h2>Chuyến đi Phan Thiết - Team building </h2>
+  <p>Chuyến outing trip là dịp để chúng em thư giãn sau giờ học, gắn kết tập thể và có thêm những trải nghiệm đáng nhớ ngoài khuôn viên trường học.</p>
+  <div class="gallery">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+  </div>
+  <div class="nav">
+    <button onclick="go(5)">Trước</button>
+    <button onclick="go(7)">Sau</button>
+  </div>
+</div>
 <!-- ===== END ===== -->
 <div class="page end">
   <h2>Cảm ơn vì đã xem</h2>
