--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@ function observeImages(){
 
 observeImages();
 </script>
-
+<!-- IMAGE PREVIEW -->
+<div id="imgPreview" class="img-preview" onclick="closeImg()">
+  <img id="previewImg">
+</div>
 </body>
 </html>
