--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   --blue-dark:#6fa8dc;
   --text:#023;
 }
-
 *{box-sizing:border-box}
-
 body{
   margin:0;
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
@@ -69,10 +67,50 @@ body{
   opacity:0;
   transform:translateY(25px);
   transition:.7s ease;
+  cursor:zoom-in;
 }
 .gallery img.show{
   opacity:1;
   transform:none;
+}
+
+/* ===== VIDEO ===== */
+.event-video{
+  width:100%;
+  max-width:700px;
+  margin:25px auto;
+  display:block;
+  border-radius:16px;
+  box-shadow:0 12px 28px rgba(0,0,0,.2);
+}
+
+/* ===== IMAGE PREVIEW ===== */
+.img-preview{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.85);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+  opacity:0;
+  pointer-events:none;
+  transition:.3s;
+}
+.img-preview.show{
+  opacity:1;
+  pointer-events:auto;
+}
+.img-preview img{
+  max-width:90%;
+  max-height:90%;
+  border-radius:18px;
+  box-shadow:0 20px 50px rgba(0,0,0,.4);
+  animation:zoom .3s ease;
+}
+@keyframes zoom{
+  from{transform:scale(.8)}
+  to{transform:scale(1)}
 }
 
 /* ===== NAV ===== */
@@ -86,11 +124,7 @@ body{
   gap:14px;
   padding:0 18px;
 }
-
-/* ===== BUTTON RIPPLE ===== */
 button{
-  position:relative;
-  overflow:hidden;
   flex:1;
   max-width:160px;
   background:linear-gradient(135deg,var(--blue),var(--blue-dark));
@@ -100,22 +134,6 @@ button{
   font-size:15px;
   box-shadow:0 10px 25px rgba(0,0,0,.25);
   cursor:pointer;
-}
-button::after{
-  content:"";
-  position:absolute;
-  width:0;
-  height:0;
-  background:rgba(255,255,255,.6);
-  border-radius:50%;
-  transform:translate(-50%,-50%);
-  opacity:0;
-}
-button:active::after{
-  width:300px;
-  height:300px;
-  opacity:0;
-  transition:.6s;
 }
 
 .end{text-align:center}
@@ -130,7 +148,6 @@ button:active::after{
   <h1>Recap Học Kỳ I</h1>
   <p>Bảo tàng triển lãm học tập HK1 7A1</p>
   <img src="intro.jpg" class="intro-img">
-
   <div class="nav">
     <button onclick="go(1)">Bắt đầu</button>
   </div>
@@ -232,11 +249,11 @@ button:active::after{
     <button onclick="go(6)">Sau</button>
   </div>
 </div>
-
 <!-- ===== EVENT 6 ===== -->
 <div class="page event">
   <h2>Công tác xã hội HK1</h2>
   <p>Công tác xã hội là hoạt động giúp chúng em có cơ hội tham gia hỗ trợ, sẻ chia và kết nối với mọi người, từ đó nâng cao ý thức trách nhiệm đối với cộng đồng.</p>
+
   <div class="gallery">
     <img src="z7153207112352_463b8569702b62b6359df4b0a82b73ea.jpg">
     <img src="z7154343469137_dc7032900494dfb14f30fdbe39177c80.jpg">
@@ -246,12 +263,14 @@ button:active::after{
     <img src="z7154638360454_1d93eddb00b59c76f95a7ff787ea96aa.jpg">
     <img src="z7154638356291_b0d29ebf0a5fe92038d1f3cd9321463d.jpg">
   </div>
+
   <div class="nav">
     <button onclick="go(5)">Trước</button>
     <button onclick="go(7)">Sau</button>
   </div>
 </div>
-  <!-- ===== EVENT 7 ===== -->
+
+<!-- ===== EVENT 7 ===== -->
 <div class="page event">
   <h2>Hội thao HK1</h2>
   <p>Hội thao là dịp để chúng em rèn luyện sức khỏe, phát huy tinh thần đoàn kết và thi đấu hết mình, góp phần tạo nên không khí sôi nổi và gắn kết tập thể.</p>
@@ -276,10 +295,12 @@ button:active::after{
     <button onclick="go(8)">Sau</button>
   </div>
 </div>
+
 <!-- ===== EVENT 8 ===== -->
 <div class="page event">
   <h2>Ngày Nhà Giáo Việt Nam</h2>
   <p>Ngày Nhà giáo Việt Nam là dịp để chúng em bày tỏ lòng biết ơn, sự kính trọng và tri ân sâu sắc đến thầy cô – những người đã tận tâm dìu dắt chúng em trên con đường học tập.</p>
+
   <div class="gallery">
     <img src="z7434665435079_eefa65e774757fd6b1db59af60af4558.jpg">
     <img src="z7434665446755_00dc65de170987b4cc41d447208e11cb.jpg">
@@ -292,15 +313,18 @@ button:active::after{
     <img src="z7434665467077_34651c5af68c7d2f33a4ca96bedf9b1c.jpg">
     <img src="z7434665458187_5af4ab4c1a7cd3a81a2db56c9be14d67.jpg">
   </div>
+
   <div class="nav">
-    <button onclick="go(5)">Trước</button>
-    <button onclick="go(7)">Sau</button>
+    <button onclick="go(7)">Trước</button>
+    <button onclick="go(9)">Sau</button>
   </div>
 </div>
-  <!-- ===== EVENT 9 ===== -->
+
+<!-- ===== EVENT 9 ===== -->
 <div class="page event">
   <h2>Học tập trải nghiệm & Teambuilding K7</h2>
   <p>Học tập trải nghiệm là hoạt động giúp chúng em học hỏi qua thực tế, rèn luyện kỹ năng và mở rộng hiểu biết, từ đó gắn kiến thức với cuộc sống hằng ngày.</p>
+
   <div class="gallery">
     <img src="z7434941640286_8c8dd3b1cbac12a9453a60d692ebe6f8.jpg">
     <img src="z7434941654505_c648328fb4dae8e2da7f4ea23f11ab83.jpg">
@@ -312,15 +336,18 @@ button:active::after{
     <img src="z7424322670583_19d23ef47de07216187073e0ec41bbef.jpg">
     <img src="z7424322677401_2ce60ab4005b794fff488697f228d298.jpg">
   </div>
+
   <div class="nav">
-    <button onclick="go(5)">Trước</button>
-    <button onclick="go(7)">Sau</button>
+    <button onclick="go(8)">Trước</button>
+    <button onclick="go(10)">Sau</button>
   </div>
 </div>
-  <!-- ===== EVENT 10 ===== -->
+
+<!-- ===== EVENT 10 ===== -->
 <div class="page event">
-  <h2>Chuyến đi Phan Thiết - Team building </h2>
+  <h2>Chuyến đi Phan Thiết - Team building</h2>
   <p>Chuyến outing trip là dịp để chúng em thư giãn sau giờ học, gắn kết tập thể và có thêm những trải nghiệm đáng nhớ ngoài khuôn viên trường học.</p>
+
   <div class="gallery">
     <img src="">
     <img src="">
@@ -330,11 +357,13 @@ button:active::after{
     <img src="">
     <img src="">
   </div>
+
   <div class="nav">
-    <button onclick="go(5)">Trước</button>
-    <button onclick="go(7)">Sau</button>
+    <button onclick="go(9)">Trước</button>
+    <button onclick="go(11)">Sau</button>
   </div>
 </div>
+
 <!-- ===== END ===== -->
 <div class="page end">
   <h2>Cảm ơn vì đã xem</h2>
@@ -343,49 +372,3 @@ button:active::after{
     <button onclick="go(0)">Xem lại</button>
   </div>
 </div>
-
-<script>
-const pages=document.querySelectorAll(".page");
-
-function go(n){
-  pages.forEach(p=>p.classList.remove("active"));
-  if(pages[n]){
-    pages[n].classList.add("active");
-    window.scrollTo(0,0);
-    observeImages();
-  }
-}
-
-function observeImages(){
-  const imgs=document.querySelectorAll(".page.active .gallery img");
-  const io=new IntersectionObserver(entries=>{
-    entries.forEach(e=>{
-      if(e.isIntersecting) e.target.classList.add("show");
-    });
-  },{threshold:.3});
-  imgs.forEach(img=>io.observe(img));
-}
-
-observeImages();
- /* ===== PHÓNG TO ẢNH ===== */
-const preview = document.getElementById("imgPreview");
-const previewImg = document.getElementById("previewImg");
-
-document.querySelectorAll(".gallery img").forEach(img=>{
-  img.addEventListener("click", ()=>{
-    previewImg.src = img.src;
-    preview.classList.add("show");
-  });
-});
-
-function closeImg(){
-  preview.classList.remove("show");
-}
-</script>
-<!-- IMAGE PREVIEW -->
-<div id="imgPreview" class="img-preview" onclick="closeImg()">
-  <img id="previewImg">
-</div>
-  
-</body>
-</html>
